# RemoteDeskCore

./: README.md
Suporte Remoto/RemoteDeskCore/: 00_START_HERE.txt  ARCHITECTURE.md  CMakeLists.txt  CODING_STANDARDS.md  DELIVERY.txt  DELIVERY_CHECKLIST.md  FINAL_REPORT.md  INDEX.md  INTEGRATION_GUIDE.md  PHASES.md  PROJECT_STATUS.md  QUICKSTART.md  QUICKSTART.txt  README.md  README_WEBRTC.txt  RemoteDesktopCore.vcxproj  START_HERE.txt  WEBRTC_ARCHITECTURE.txt  WEBRTC_IMPLEMENTATION_SUMMARY.md  WEBRTC_NAT_TRAVERSAL.md  build.bat  build.ps1  ci.yml
Suporte Remoto/RemoteDeskCore/include/: DXGICapturer.h  InputInjector.h  NVENCEncoder.h  OptimizationLayer.h  P2PManager.h  RemoteDesktopSystem.h  Renderer.h  WebRTCDataChannel.h  WebSocketSignalingClient.h
Suporte Remoto/RemoteDeskCore/signaling-server/: package.json  signaling-server.js
Suporte Remoto/RemoteDeskCore/src/: main.cpp
Suporte Remoto/RemoteDeskCore/src/capture/: DXGICapturer.cpp
Suporte Remoto/RemoteDeskCore/src/input/: InputInjector.cpp
Suporte Remoto/RemoteDeskCore/src/network/: NVENCEncoder.cpp  OptimizationLayer.cpp  P2PManager.cpp  RemoteDesktopSystem.cpp  WebRTCDataChannel.cpp  WebSocketSignalingClient.cpp
Suporte Remoto/RemoteDeskCore/src/render/: Renderer.cpp
